added story 3 and stor 4
